[gd_scene load_steps=12 format=2]

[ext_resource path="res://_Game/UI/Themes/Fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://_Game/Images/flag-uk.png" type="Texture" id=2]
[ext_resource path="res://_Game/Images/flag-finland.png" type="Texture" id=3]
[ext_resource path="res://_Game/Images/flag-sweden.png" type="Texture" id=4]
[ext_resource path="res://_Game/Images/flag-uk-selected.png" type="Texture" id=5]
[ext_resource path="res://_Game/Images/flag-sweden-selected.png" type="Texture" id=6]
[ext_resource path="res://_Game/Images/flag-finland-selected.png" type="Texture" id=7]
[ext_resource path="res://_Game/Resources/buttongroup_language.tres" type="ButtonGroup" id=8]
[ext_resource path="res://_Game/Scripts/scr_main_menu.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="UI_main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 200 )

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -150.5
margin_right = 150.5
margin_bottom = 19.0
theme = SubResource( 2 )
text = "main_menu$$FabLab Virtuaalimalli"
align = 1

[node name="Button" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -29.0
margin_right = 150.0
margin_bottom = -9.0
rect_min_size = Vector2( 60, 0 )
text = "main_menu$$Aloita"
icon_align = 1
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -80.0
margin_right = 150.0
margin_bottom = -56.0

[node name="CheckBox" type="CheckBox" parent="Panel/HBoxContainer"]
margin_right = 24.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Panel/HBoxContainer"]
margin_left = 28.0
margin_top = 5.0
margin_right = 258.0
margin_bottom = 19.0
text = "main_menu$$Käännä hiiren y-akseli"

[node name="Panel" type="Panel" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.5
margin_right = 150.5

[node name="Button_Finnish" type="TextureButton" parent="Panel/Panel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -38.0
margin_right = 56.0
rect_min_size = Vector2( 56, 38 )
toggle_mode = true
pressed = true
group = ExtResource( 8 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 7 )
expand = true

[node name="Button_Swedish" type="TextureButton" parent="Panel/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -28.0
margin_top = -38.0
margin_right = 28.0
rect_min_size = Vector2( 56, 38 )
toggle_mode = true
group = ExtResource( 8 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
expand = true

[node name="Button_English" type="TextureButton" parent="Panel/Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -56.0
margin_top = -38.0
rect_min_size = Vector2( 56, 38 )
toggle_mode = true
group = ExtResource( 8 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
expand = true

[connection signal="pressed" from="Panel/Button" to="." method="start_game"]
[connection signal="toggled" from="Panel/HBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="Panel/Panel/Button_Finnish" to="." method="change_language"]
[connection signal="pressed" from="Panel/Panel/Button_Swedish" to="." method="change_language"]
[connection signal="pressed" from="Panel/Panel/Button_English" to="." method="change_language"]
